--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel=”icon” href="favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <!--  <link rel="icon" type="image/png" href="favicon.png"/>-->
 
   <title>tokobus</title>
