--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel=”icon” href=”favicon.ico”>
+  <link rel=”icon” href="favicon.ico">
   <!--  <link rel="icon" type="image/png" href="favicon.png"/>-->
 
   <title>tokobus</title>
@@ -35,7 +35,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3072965072';
+    var serviceWorkerVersion = '1955114783';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
