--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
   <link rel="icon" href="favicon.ico">
   <!--  <link rel="icon" type="image/png" href="favicon.png"/>-->
 
-  <title>tokobus</title>
+  <title>TokoBus</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
