--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel=”icon” href="favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <!--  <link rel="icon" type="image/png" href="favicon.png"/>-->
 
-  <title>tokobus</title>
+  <title>TokoBus</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '1955114783';
+    var serviceWorkerVersion = '3137427791';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
