ファイル名を変更

--- a/privacy.html
+++ b/privacy.html
@@ -23,9 +23,13 @@
         <div id="container">
             <div id="contents">
                 <!-- 本文 -->
-                <h2>サポート</h2>
-                <p>何か不具合等があれば下記メールアドレスからご連絡ください。</p>
-                <p>renq.tokobus@gmail.com</p>
+                <h2>プライバシーポリシー</h2>
+                <p>[ 利用者情報の取得 ]</p>
+                <p>本アプリが利用者の個人情報を取得することはありません。</p><br>
+                <p>[ 利用者情報の利用 ]</p>
+                <p>本アプリが利用者の個人情報を利用することはありません。</p><br>
+                <p>[ 利用者情報の第三者提供 ]</p>
+                <p>本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
                 <br><br>
             </div>
         </div>
