--- a/privacy.html
+++ b/privacy.html
@@ -1,39 +1,65 @@
-<html>
+<!doctype html>
+<html lang="ja" data-bs-theme="dark">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <!--   <link rel="shortcut icon" href="images/favicon.ico" type="favicon.ico">   -->
-    <title>TokoBus</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>TokoBus | Privacy Policy</title>
+    <link rel="icon" href="images/icon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="wrapper">
-        <div id="header">
-            <p class="logo"><a href="index.html">TokoBus</a></p>
-            <p class="description">このページは時刻表アプリTokoBusのウェブサイトです</p>
-        </div>
-        <div id="globalnavi">
-            <ul>
-                <li><a href="index.html">ホーム</a></li>
-                <li><a href="support.html">サポートページ</a></li>
-                <li><a href="privacy.html">プライバシーポリシー</a></li>
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <img alt="Home" width="40" height="40" src="images/icon.png" style="margin-right: 10%;">
+                <span class="fs-4">TokoBus</span>
+            </a>
+
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="/privacy" class="nav-link active" aria-current="page">Privacy Policy</a></li>
+                <li class="nav-item"><a href="/support" class="nav-link">Support</a></li>
             </ul>
+        </header>
+    </div>
+
+    <div class="px-4 py-5 my-5 text-center">
+        <h1 class="display-5 fw-bold text-body-emphasis" style="margin-bottom: 5%;">プライバシーポリシー</h1>
+        <div class="col-lg-6 mx-auto" style="margin-bottom: 5%;">
+            <p class="lead">利用者情報の取得</p>
+            <p>本アプリが利用者の個人情報を取得することはありません。</p>
         </div>
-        <div id="container">
-            <div id="contents">
-                <!-- 本文 -->
-                <h2>プライバシーポリシー</h2>
-                <p>[ 利用者情報の取得 ]</p>
-                <p>本アプリが利用者の個人情報を取得することはありません。</p><br>
-                <p>[ 利用者情報の利用 ]</p>
-                <p>本アプリが利用者の個人情報を利用することはありません。</p><br>
-                <p>[ 利用者情報の第三者提供 ]</p>
-                <p>本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
-                <br><br>
-            </div>
+        <div class="col-lg-6 mx-auto" style="margin-bottom: 5%;">
+            <p class="lead">利用者情報の利用</p>
+            <p>本アプリが利用者の個人情報を利用することはありません。</p>
+        </div>
+        <div class="col-lg-6 mx-auto" style="margin-bottom: 5%;">
+            <p class="lead">利用者情報の第三者提供</p>
+            <p>本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
         </div>
     </div>
+
+    <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="col-md-4 d-flex align-items-center">
+                <a class="text-body-secondary" href="https://github.com/twajp/TokoBus" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="32" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
+                    </svg>
+                </a>
+                <span class="mb-3 mb-md-0 text-body-secondary">Tomoki Akasaka</span>
+            </div>
+
+            <ul class="nav col-md-4 justify-content-end">
+                <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="/privacy" class="nav-link px-2 text-body-secondary">Privacy Policy</a></li>
+                <li class="nav-item"><a href="/support" class="nav-link px-2 text-body-secondary">Support</a></li>
+            </ul>
+        </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 
 </html>
