リンクの間違いを修正

--- a/privacy.html
+++ b/privacy.html
@@ -12,15 +12,15 @@
 <body>
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <img alt="Home" width="40" height="40" src="images/icon.png" style="margin-right: 10%;">
                 <span class="fs-4">TokoBus</span>
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="/privacy" class="nav-link active" aria-current="page">Privacy Policy</a></li>
-                <li class="nav-item"><a href="/support" class="nav-link">Support</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="privacy.html" class="nav-link active" aria-current="page">Privacy Policy</a></li>
+                <li class="nav-item"><a href="support.html" class="nav-link">Support</a></li>
             </ul>
         </header>
     </div>
@@ -53,9 +53,9 @@
             </div>
 
             <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
-                <li class="nav-item"><a href="/privacy" class="nav-link px-2 text-body-secondary">Privacy Policy</a></li>
-                <li class="nav-item"><a href="/support" class="nav-link px-2 text-body-secondary">Support</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="privacy.html" class="nav-link px-2 text-body-secondary">Privacy Policy</a></li>
+                <li class="nav-item"><a href="support.html" class="nav-link px-2 text-body-secondary">Support</a></li>
             </ul>
         </footer>
     </div>
