スペースを調整

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="px-4 py-5 my-5 text-center">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="margin-bottom: 5%;">TokoBusとは</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis" style="margin-bottom:40px;">TokoBusとは</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">
                 早稲田大学所沢キャンパスのスクールバス時刻表アプリです。<br>
