--- a/support.html
+++ b/support.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="px-4 py-5 my-5 text-center">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="margin-bottom: 5%;">サポート</h1>
-        <div class="col-lg-6 mx-auto" style="margin-bottom: 5%;">
+        <h1 class="display-5 fw-bold text-body-emphasis" style="margin-bottom: 40px;">サポート</h1>
+        <div class="col-lg-6 mx-auto">
             <p class="lead">何か不具合等があれば下記メールアドレスからご連絡ください。</p>
             <p>renq.tokobus@gmail.com</p>
         </div>
