--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <a class="text-body-secondary" href="https://play.google.com/store/apps/details?id=jp.twa.tokobus" target="_blank">
                 <img src="https://play.google.com/intl/ja/badges/static/images/badges/ja_badge_web_generic.png" height="78" style="margin-top:-9px;">
             </a>
+            <a class="text-body-secondary" href="https://twajp.github.io/TokoBus/" target="_blank">
+                <button type="button" class="btn btn-outline-light" style="width: 100px; height: 58px;">Web版</button>
+            </a>
         </div>
 
     </div>
