フッターの位置を中央に修正

--- a/support.html
+++ b/support.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div class="container" style="position: absolute; bottom: 0;">
+    <div class="container" style="position: absolute; left: 0; right: 0; bottom: 0;">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
                 <a class="text-body-secondary" href="https://github.com/twajp/TokoBus" target="_blank">
