--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="display: flex; flex-direction: column; min-height: 100vh;">
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div class="container" style="position: absolute; left: 0; right: 0; bottom: 0;">
+    <div class="container" style="margin-top: auto;">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
                 <a class="text-body-secondary" href="https://github.com/twajp/TokoBus" target="_blank">
