nav-linkの色を臙脂に変更

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="privacy.html" class="nav-link">Privacy Policy</a></li>
-                <li class="nav-item"><a href="support.html" class="nav-link">Support</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link active" style="background-color: #8E1728;">Home</a></li>
+                <li class="nav-item"><a href="privacy.html" class="nav-link" style="color: #FFFFFF;">Privacy Policy</a></li>
+                <li class="nav-item"><a href="support.html" class="nav-link" style="color: #FFFFFF;">Support</a></li>
             </ul>
         </header>
     </div>
