--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="ja" data-bs-theme="dark">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TokoBus | Home</title>
     <link rel="icon" href="images/icon.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
 <body style="display: flex; flex-direction: column; min-height: 100vh;">
@@ -35,7 +35,7 @@
                 フロンティアリサーチセンターへのシャトルバスにも対応しています。<br>
             </p>
         </div>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center" style="margin-bottom:40px;">
             <a class="text-body-secondary" href="https://apps.apple.com/jp/app/id6443772387" target="_blank">
                 <img src="images/Download_on_the_App_Store_Badge_JP_RGB_blk_100317.svg" height="60">
             </a>
@@ -46,7 +46,6 @@
                 <button type="button" class="btn btn-outline-light" style="width: 100px; height: 58px;">Web版</button>
             </a>
         </div>
-
     </div>
 
     <div class="container" style="margin-top: auto;">
@@ -67,7 +66,7 @@
             </ul>
         </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
