iframeで埋め込み

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <button type="button" class="btn btn-outline-light" style="width: 100px; height: 58px;">Web版</button>
             </a>
         </div>
+        <!-- <iframe src="https://twajp.github.io/TokoBus/#/" width=80% height="700"></iframe> -->
     </div>
 
     <div class="container" style="margin-top: auto;">
