--- a/support.html
+++ b/support.html
@@ -7,6 +7,7 @@
     <title>TokoBus | Support</title>
     <link rel="icon" href="images/icon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body style="display: flex; flex-direction: column; min-height: 100vh;">
@@ -31,7 +32,9 @@
             <p class="lead">何か不具合等があれば下記メールアドレスまたはフォームからご連絡ください。</p>
             <p>renq.tokobus@gmail.com</p>
         </div>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScXcsU5U5SCWe8hbiYga3uy44df5McJM2Ya24ZT9lNVN7xfOA/viewform?embedded=true" width="640" height="500" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+        <div class="googleform-wrapper container">
+            <iframe class="container" src="https://docs.google.com/forms/d/e/1FAIpQLScXcsU5U5SCWe8hbiYga3uy44df5McJM2Ya24ZT9lNVN7xfOA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+        </div>
     </div>
 
     <div class="container" style="margin-top: auto;">
