READMEから内容をコピペし、レイアウトを更新

--- a/index.html
+++ b/index.html
@@ -26,27 +26,70 @@
     </div>
 
     <div class="px-4 py-5 my-5 text-center">
-        <h1 class="display-5 fw-bold text-body-emphasis" style="margin-bottom:40px;">TokoBusとは</h1>
-        <div class="col-lg-6 mx-auto">
+        <h1 class="display-5 fw-bold text-body-emphasis" style="margin-bottom:40px;">TokoBus</h1>
+        <div class="col-lg-6 mx-auto" style="width: fit-content; margin: auto;">
+            <h2 class="mb-4">概要</h2>
             <p class="lead mb-4">
-                早稲田大学所沢キャンパスのスクールバス時刻表アプリです。<br>
-                曜日や祝日などその日に合ったダイヤを自動で表示します。<br>
-                また時刻表と共に残り時間も表示されるため、どのバスに乗れるか簡単に確認できます。<br>
-                フロンティアリサーチセンターへのシャトルバスにも対応しています。<br>
+                早稲田大学所沢キャンパスの非公式スクールバス時刻表アプリです。
             </p>
+
+            <h2 class="mb-4">主な機能</h2>
+            <ul class="lead mb-4 text-start">
+                <li>時刻表と発車までの残り時間を共に表示するため、乗車可能なバスが簡単に確認できます。</li>
+                <li>曜日や祝日に応じた適切なダイヤを自動で表示します。</li>
+                <li>授業を行う祝日と臨時の休業日にも対応しています。</li>
+                <li>特別ダイヤがある場合には画面上に通知します。</li>
+                <li>フロンティアリサーチセンターへのシャトルバスにも対応しています。</li>
+            </ul>
+
+            <h2 class="mb-4">免責事項</h2>
+            <p class="lead mb-4">
+                本アプリは学生が趣味で開発しています。</br>
+                本アプリの不具合等によるいかなる損害についても一切の責任を負いかねます。
+            </p>
+
+            <h2 class="mb-4">リリース</h2>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center" style="margin-bottom:40px;">
+                <a class="text-body-secondary" href="https://apps.apple.com/jp/app/id6443772387" target="_blank">
+                    <img src="images/Download_on_the_App_Store_Badge_JP_RGB_blk_100317.svg" height="60">
+                </a>
+                <a class="text-body-secondary" href="https://play.google.com/store/apps/details?id=jp.twa.tokobus" target="_blank">
+                    <img src="https://play.google.com/intl/ja/badges/static/images/badges/ja_badge_web_generic.png" height="78" style="margin-top:-9px;">
+                </a>
+                <a class="text-body-secondary" href="https://twajp.github.io/TokoBus/" target="_blank">
+                    <button type="button" class="btn btn-outline-light" style="width: 100px; height: 58px;">Web版</button>
+                </a>
+            </div>
+
+            <h2 class="mb-4">関連リンク</h2>
+            <ul class="lead mb-4 text-start">
+                <li><a href="https://www.waseda.jp/fhum/hum/facility/bus-parking/" target="_blank">大学公式サイト/スクールバス時刻表ページ</a></li>
+                <li><a href="https://www.waseda.jp/top/about/work/organizations/academic-affairs-division/academic-calendar" target="_blank">大学公式サイト/大学暦・授業時間ページ</a></li>
+            </ul>
         </div>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center" style="margin-bottom:40px;">
-            <a class="text-body-secondary" href="https://apps.apple.com/jp/app/id6443772387" target="_blank">
-                <img src="images/Download_on_the_App_Store_Badge_JP_RGB_blk_100317.svg" height="60">
-            </a>
-            <a class="text-body-secondary" href="https://play.google.com/store/apps/details?id=jp.twa.tokobus" target="_blank">
-                <img src="https://play.google.com/intl/ja/badges/static/images/badges/ja_badge_web_generic.png" height="78" style="margin-top:-9px;">
-            </a>
-            <a class="text-body-secondary" href="https://twajp.github.io/TokoBus/" target="_blank">
-                <button type="button" class="btn btn-outline-light" style="width: 100px; height: 58px;">Web版</button>
-            </a>
-        </div>
-        <!-- <iframe src="https://twajp.github.io/TokoBus/#/" width=80% height="700"></iframe> -->
+
+        <!-- スマホだと縦に並ばない -->
+        <!-- <table class="d-grid gap-2 d-sm-flex justify-content-sm-center" style="margin-bottom:40px;">
+            <tr>
+                <td style="padding: 10px;">
+                    <a href="https://apps.apple.com/jp/app/id6443772387" target="_blank">
+                        <img height="60" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Download_on_the_App_Store_Badge_JP_RGB_blk.svg/2560px-Download_on_the_App_Store_Badge_JP_RGB_blk.svg.png">
+                    </a>
+                </td>
+                <td style="padding: 10px;">
+                    <a href="https://play.google.com/store/apps/details?id=jp.twa.tokobus" target="_blank">
+                        <img height="78" src="https://play.google.com/intl/ja/badges/static/images/badges/ja_badge_web_generic.png">
+                    </a>
+                </td>
+                <td style="padding: 10px;">
+                    <a class="text-body-secondary" href="https://twajp.github.io/TokoBus/" target="_blank">
+                        <button type="button" class="btn btn-outline-light" style="width: 100px; height: 58px;">Web版</button>
+                    </a>
+                </td>
+            </tr>
+        </table> -->
+
+        <!-- <iframe src="https://twajp.github.io/TokoBus/" width=80% height="700"></iframe> -->
     </div>
 
     <div class="container" style="margin-top: auto;">
