--- a/privacy.html
+++ b/privacy.html
@@ -27,18 +27,20 @@
 
     <div class="px-4 py-5 my-5 text-center">
         <h1 class="display-5 fw-bold text-body-emphasis" style="margin-bottom: 40px;">プライバシーポリシー</h1>
-        <div class="col-lg-6 mx-auto" style="margin-bottom: 40px;">
-            <p class="lead">利用者情報の取得</p>
-            <p>本アプリが利用者の個人情報を取得することはありません。</p>
-        </div>
-        <div class="col-lg-6 mx-auto" style="margin-bottom: 40px;">
-            <p class="lead">利用者情報の利用</p>
-            <p>本アプリが利用者の個人情報を利用することはありません。</p>
-        </div>
-        <div class="col-lg-6 mx-auto" style="margin-bottom: 40px;">
-            <p class="lead">利用者情報の第三者提供</p>
-            <p>本アプリが利用者の個人情報を第三者へ提供することはありません。</p>
-        </div>
+        <h2 class="mb-4">利用者情報の取得</h2>
+        <p class="lead mb-4">
+            本アプリが利用者の個人情報を取得することはありません。
+        </p>
+
+        <h2 class="mb-4">利用者情報の利用</h2>
+        <p class="lead mb-4">
+            本アプリが利用者の個人情報を利用することはありません。
+        </p>
+
+        <h2 class="mb-4">利用者情報の第三者提供</h2>
+        <p class="lead mb-4">
+            本アプリが利用者の個人情報を第三者へ提供することはありません。
+        </p>
     </div>
 
     <div class="container" style="margin-top: auto;">
