--- a/support.html
+++ b/support.html
@@ -29,8 +29,10 @@
     <div class="px-4 py-5 my-5 text-center">
         <h1 class="display-5 fw-bold text-body-emphasis" style="margin-bottom: 40px;">サポート</h1>
         <div class="col-lg-6 mx-auto">
-            <p class="lead">何か不具合等があれば下記メールアドレスまたはフォームからご連絡ください。</p>
-            <p>renq.tokobus@gmail.com</p>
+            <p class="lead mb-4">
+                何か不具合等があれば下記メールアドレスまたはフォームからご連絡ください。</br>
+                renq.tokobus@gmail.com
+            </p>
         </div>
         <div class="googleform-wrapper container">
             <iframe class="container" src="https://docs.google.com/forms/d/e/1FAIpQLScXcsU5U5SCWe8hbiYga3uy44df5McJM2Ya24ZT9lNVN7xfOA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
