免責事項の説明を更新し、公式サイトの併用を推奨する文言を追加

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
             <h2 class="mb-4">免責事項</h2>
             <p class="lead mb-4">
-                本アプリは学生が趣味で開発しています。</br>
+                本アプリは卒業生が趣味で開発している非公式なものです。</br>
+                時刻表はPDFを見ながら手入力しているため、間違いを含む可能性があります。</br>
+                特に試験日等の重要な日には、公式サイトを併用することを推奨します。</br>
                 本アプリの不具合等によるいかなる損害についても一切の責任を負いかねます。
             </p>
 
